--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,8 +2,12 @@
 interface Props {
 	title: string;
 }
-
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
 const { title } = Astro.props;
+import "@fontsource-variable/onest"
+
+
 ---
 
 <!doctype html>
@@ -16,36 +20,31 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body >
+		<div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
+		
+		<Header/>
 		<slot />
+		<Footer></Footer>
 	</body>
 </html>
 <style is:global>
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+		color-scheme: light dark;
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
+		font-family: "Onest Variable",system-ui, sans-serif;	
+		scroll-behavior: smooth;
+			
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+	
+
+	body{
+		min-height: 100vh;
+		background: #0a0a0a;
+		overflow-x: hidden;
+		display: flex;
+		flex-direction: column;
+		
 	}
 </style>
