--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -8,5 +8,5 @@
         </p>
     </div>
     
-    <img src="../../public/Andres.jpeg" class="size-56 rotate-3 shadow-lg m-auto shadow-white/40 rounded-md object-cover" alt="Imagen de Andres Rodriguez">
+    <img src="./Andres.jpeg" class="size-56 rotate-3 shadow-lg m-auto shadow-white/40 rounded-md object-cover" alt="Imagen de Andres Rodriguez">
 </article>
