--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import Experience from '../components/Experience.astro'
 	<main class="px-4">
 		<SectionContainer id="Inicio" class="py-44 pb-32">
 			<img
-				src="../../public/42b6df93-785d-40ee-b552-cebcb617dc9b.jpeg"
+				src="./Andres.jpeg"
 				alt="Logo"
 				class="rounded-full w-12 h-12 object-cover mb-2"
 			/>
