--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -47,7 +47,7 @@ const PROJECTS = [
         tittle: "Instagram Clone",
         description:
             "Clon de instagram desarrollado usando php y js con las funcionalidades de subir fotos, dar likes, comentar, login, seguir/dejar de seguir usuarios. Todo esto apoyado por una api y base de datos propia.",
-        img: "../../public/project3.png",
+        img: "./project3.png",
         tags: [TAGS.PHP, TAGS.JS, TAGS.HTML, TAGS.CSS, TAGS.MYSQL],
         github: "https://github.com/Drezxzx/instagram-clone",
         link: "https://drezzgram.000webhostapp.com/api/src/controllers/main.php",
@@ -56,7 +56,7 @@ const PROJECTS = [
         tittle: "Bazar-store",
         description:
             "App de que simula ser un buscador de una tienda con funcionalidades de filtrar y de busqueda y detalle del producto.",
-        img: "../../public/project2.png",
+        img: "./project2.png",
         tags: [TAGS.PHP, TAGS.JS, TAGS.HTML, TAGS.CSS],
         github: "https://github.com/Drezxzx/bazar-store",
         link: "https://bazar-store.000webhostapp.com/bazar-store/main.php",
@@ -65,7 +65,7 @@ const PROJECTS = [
         tittle: "Trivia",
         description:
             "Un trivia desarrollado con node.js, siguiendo la arquitectura MVC. Esta aplicación cuenta con un login para guardar puntuaciones de las partidas y mostrarse en un ranking global. Todo esto apoyado por una base de datos y api propia",
-        img: "../../public/trivia.png",
+        img: "./trivia.png",
         tags: [TAGS.NODE_JS, TAGS.MYSQL, TAGS.JS, TAGS.HTML, TAGS.CSS],
         github: "https://github.com/Drezxzx/trivia",
         link: "trivia-ui0k.onrender.com/",
@@ -74,7 +74,7 @@ const PROJECTS = [
         tittle: "reading-list",
         description:
             "Aplicación basado en las pruebas tecnicas de midudev, cuenta con una busqeda de libros, capacidad de filtrar y guardar en favoritos.",
-        img: "../../public/project1.png",
+        img: "./project1.png",
         tags: [TAGS.JS, TAGS.HTML, TAGS.CSS],
         github: "https://github.com/Drezxzx/reading-list",
         link: "https://drezxzx.github.io/reading-list/",
