--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -68,7 +68,7 @@ const PROJECTS = [
         img: "./trivia.png",
         tags: [TAGS.NODE_JS, TAGS.MYSQL, TAGS.JS, TAGS.HTML, TAGS.CSS],
         github: "https://github.com/Drezxzx/trivia",
-        link: "trivia-ui0k.onrender.com/",
+        link: "https://trivia-ui0k.onrender.com",
     },
     {
         tittle: "reading-list",
