--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,8 +3,8 @@
         <p class="text-base md:text-lg  text-pretty">
             Me llamo <span class="text-purple-400/90">Andrés</span>, soy un programador web full stack apasionado por crear applicaiones con muchas <span class="text-purple-400/90">funcionalidades</span>, apasionado por aprender lenguajes y freamworks webs.
             </p>
-        <p class="text-lg  text-pretty">
-            <span class="text-purple-400/90">Actualmente</span> me encuentro realizando las practicas de una formación profecional en programación de lenguajes estructurados. En estas practicas estoy construyendo <span class="text-purple-400/90">bases de datos relacionales</span> para ser usadas en la aplicación de la empresa.
+        <p class="text-base  md:text-lg text-pretty">
+            <span class="text-purple-400/80 ">Actualmente</span> me encuentro realizando las practicas de una formación profesional en programación de lenguajes estructurados. En estas practicas estoy construyendo <span class="text-purple-400/80 ">una base de datos relacional</span> que se va a utilizar en la aplicación de la empresa.
         </p>
     </div>
     
