--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Experience from '../components/Experience.astro'
 				class="rounded-full w-12 h-12 object-cover mb-2"
 			/>
 
-			<h1 class="lg:text-5xl   md:text-4xl text-2xl font-bold flex pb-6 lg:pb-10 flex-row gap-x-4">
+			<h1 class="lg:text-5xl text-white  md:text-4xl text-2xl font-bold flex pb-6 lg:pb-10 flex-row gap-x-4">
 				Hey, soy Andrés
 				<div class="flex items-center justify-center">
 					<a class="flex items-center justify-center"
