--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 <header
-    class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2"
+    class="fixed top-0 z-10 flex items-center text-white justify-center w-full mx-auto mt-2"
 >
     <nav
         class="flex flex-row gap-6 w-[25rem] md:gap-10 opacity-90 p-1 md:w-[34rem] md:p-2 rounded-full items-center justify-center font-semibold"
