--- a/src/components/Beadge.astro
+++ b/src/components/Beadge.astro
@@ -1,4 +1,4 @@
-<div class="flex items-center animate-pulse">
+<div class="flex text-white items-center animate-pulse">
     <span class="relative inline-flex hover:scale-105  transition overflow-hidden rounded-full p-[1px]">
       <span
         class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] bg-[conic-gradient(from_90deg_at_50%_50%,#51E4B8_0%,#21554E_50%,#51E4B8_100%)]"
