--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ import Experience from '../components/Experience.astro'
 		</SectionContainer >
 
 		<SectionContainer id="Experiencia">
-			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+			<h2 class="text-3xl text-white  font-semibold mb-6 flex gap-x-3 items-center">
 				<Breifcase class="size-7"></Breifcase>
 				Experiecia laboral </h2>
 			<Experience>
@@ -74,7 +74,7 @@ import Experience from '../components/Experience.astro'
 		</SectionContainer>
 
 		<SectionContainer id="Proyectos">
-			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+			<h2 class="text-3xl text-white  font-semibold mb-6 flex gap-x-3 items-center">
 				<Code class="size-7"></Code>
 				Proyectos
 			</h2>
@@ -82,7 +82,7 @@ import Experience from '../components/Experience.astro'
 		</SectionContainer>
 
 		<SectionContainer  id="Sobre mi">
-				<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+				<h2 class="text-3xl text-white  font-semibold mb-6 flex gap-x-3 items-center">
 					<Me class="Size-7"></Me>
 					Sobre mí
 				</h2>
@@ -92,7 +92,7 @@ import Experience from '../components/Experience.astro'
 		</SectionContainer>
 
 		<SectionContainer id="Tecnologias" >
-			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+			<h2 class="text-3xl text-white  font-semibold mb-6 flex gap-x-3 items-center">
 				<Exp class="Size-7"></Exp>
 				Tecnologías
 			</h2>
