--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -105,7 +105,7 @@ const PROJECTS = [
                 
             </ul>
                 </h3>
-                <p class="text-base  md:text-xl mb-4 md:mb-6 text-pretty">{description} </p>
+                <p class="text-base text-white  md:text-xl mb-4 md:mb-6 text-pretty">{description} </p>
                 <ul class="flex flex-row gap-x-1 md:gap-x-2 min-w-60 md:min-w-120  mb-2">
                     {tags.map((tag) => (
                         <li>
