--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,5 +1,5 @@
 <article class="flex gap-6 flex-col-reverse  md:flex-row ">
-    <div class="flex flex-col gap-y-4">
+    <div class="flex flex-col text-white gap-y-4">
         <p class="text-base md:text-lg  text-pretty">
             Me llamo <span class="text-purple-400/90">Andrés</span>, soy un programador web full stack apasionado por crear applicaiones con muchas <span class="text-purple-400/90">funcionalidades</span>, apasionado por aprender lenguajes y freamworks webs.
             </p>
