--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,5 +1,5 @@
 <a
-    class=`rounded-full bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center gap-x-2 items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2 ${Astro.props.class}`
+    class=`rounded-full text-white bg-white/5 hover:scale-110 transition hover:bg-white/10 border border-white/10 flex justify-center gap-x-2 items-center mg:gap-x-4 mg:py-2 mg:px-4 py-1 text-xs mg:text-base px-2 ${Astro.props.class}`
     href={Astro.props.href}
     target="_blank"
     rel="noopener noreferrer"
