--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -106,7 +106,7 @@ const PROJECTS = [
     {
         tittle: "Tienda De Movíles",
         description:
-            "Tienda completa desarrolada con react, que cuenta con las funcionalidades de login, carrito de compra, detalles de productos, busquedas y compras. Apollada con una api propía",
+            "Tienda completa desarrolada con react, que cuenta con las funcionalidades de login, carrito de compra, detalles de productos, busquedas y compras. Apoyada con una api propía",
         img: "./project4.png",
         tags: [TAGS.JS,TAGS.TAILWIND, TAGS.TYPESCRYPT , TAGS.ReactRouter, TAGS.REACT],
         github: "https://github.com/Drezxzx/Store-react",
