--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -111,7 +111,7 @@ const PROJECTS = [
         tags: [TAGS.JS,TAGS.TAILWIND, TAGS.TYPESCRYPT , TAGS.ReactRouter, TAGS.REACT],
         github: "https://github.com/Drezxzx/Store-react",
         link: "https://store-react-xi.vercel.app/",
-    },
+    }
 ];
 ---
 
@@ -119,7 +119,7 @@ const PROJECTS = [
     PROJECTS.map(({ tittle, description, img, github, tags,link }) => (
         <article class="size-30 mb-24" >
             <div >
-                <h3 class="md:text-2xl lg:text-3xl text-xl  flex flex-row justify-between   mb-2 font-semibold text-purple-400/80">
+                <h3 class="md:text-2xl lg:text-3xl text-xl  flex flex-row justify-between mb-2 font-semibold text-purple-400/80 ">
                     {tittle} <ul class="flex text-white flex-row gap-x-2">
                 <li>
                     <Social class=" bg-[#1f2937] hover:bg-[#242d39]" href={github}>
@@ -139,7 +139,7 @@ const PROJECTS = [
             </ul>
                 </h3>
                 <p class="text-base text-white  md:text-xl mb-4 md:mb-6 text-pretty">{description} </p>
-                <ul class="flex flex-row gap-x-1 md:gap-x-2 min-w-60 md:min-w-120  mb-2">
+                <ul class="flex flex-row gap-x-1 md:gap-x-2 min-w-2 flex-wrap md:min-w-120  mb-2">
                     {tags.map((tag) => (
                         <li>
                             <span
