--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -139,7 +139,7 @@ const PROJECTS = [
             </ul>
                 </h3>
                 <p class="text-base text-white  md:text-xl mb-4 md:mb-6 text-pretty">{description} </p>
-                <ul class="flex flex-row gap-x-1 md:gap-x-2 min-w-2 flex-wrap md:min-w-120  mb-2">
+                <ul class="flex flex-row gap-x-1 gap-3 md:gap-x-2 min-w-2 flex-wrap md:min-w-120  mb-2">
                     {tags.map((tag) => (
                         <li>
                             <span
