--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -68,6 +68,15 @@ const TAGS = {
 };
 const PROJECTS = [
     {
+        tittle: "Tienda De Movíles",
+        description:
+            "Tienda completa desarrolada con react, que cuenta con las funcionalidades de login, carrito de compra, detalles de productos, busquedas y compras. Apoyada con una api propía",
+        img: "./project4.png",
+        tags: [TAGS.JS,TAGS.TAILWIND, TAGS.TYPESCRYPT , TAGS.ReactRouter, TAGS.REACT, TAGS.MYSQL, TAGS.NODE_JS],
+        github: "https://github.com/Drezxzx/Store-react",
+        link: "https://store-react-xi.vercel.app/",
+    },
+    {
         tittle: "Instagram Clone",
         description:
             "Clon de instagram desarrollado usando php y js con las funcionalidades de subir fotos, dar likes, comentar, login, seguir/dejar de seguir usuarios. Todo esto apoyado por una api y base de datos propia.",
@@ -75,6 +84,15 @@ const PROJECTS = [
         tags: [TAGS.PHP, TAGS.JS, TAGS.HTML, TAGS.CSS, TAGS.MYSQL],
         github: "https://github.com/Drezxzx/instagram-clone",
         link: "https://drezzgram.000webhostapp.com/api/src/controllers/main.php",
+    },
+    {
+        tittle: "Coffe-landing-page",
+        description:
+            "Landing page creada con un api externa de una caféteria que muestra todos los productos de la caféteria y te permite ver los productos que estan disponibles y los que no.",
+        img: "./project1.png",
+        tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT],
+        github: "https://github.com/Drezxzx/coffe-landing-page",
+        link: "https://coffe-landing-page-lemon.vercel.app/",
     },
     {
         tittle: "Bazar-store",
@@ -93,24 +111,6 @@ const PROJECTS = [
         tags: [TAGS.NODE_JS, TAGS.MYSQL, TAGS.JS, TAGS.HTML, TAGS.CSS],
         github: "https://github.com/Drezxzx/trivia",
         link: "https://trivia-ui0k.onrender.com",
-    },
-    {
-        tittle: "reading-list",
-        description:
-            "Aplicación basado en las pruebas tecnicas de midudev, cuenta con una busqeda de libros, capacidad de filtrar y guardar en favoritos.",
-        img: "./project1.png",
-        tags: [TAGS.JS, TAGS.HTML, TAGS.CSS],
-        github: "https://github.com/Drezxzx/reading-list",
-        link: "https://drezxzx.github.io/reading-list/",
-    },
-    {
-        tittle: "Tienda De Movíles",
-        description:
-            "Tienda completa desarrolada con react, que cuenta con las funcionalidades de login, carrito de compra, detalles de productos, busquedas y compras. Apoyada con una api propía",
-        img: "./project4.png",
-        tags: [TAGS.JS,TAGS.TAILWIND, TAGS.TYPESCRYPT , TAGS.ReactRouter, TAGS.REACT],
-        github: "https://github.com/Drezxzx/Store-react",
-        link: "https://store-react-xi.vercel.app/",
     }
 ];
 ---
