'cambio del nuevo proyecto'

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -95,13 +95,13 @@ const PROJECTS = [
         link: "https://coffe-landing-page-lemon.vercel.app/",
     },
     {
-        tittle: "Bazar-store",
+        tittle: "Translated.io",
         description:
-            "App de que simula ser un buscador de una tienda con funcionalidades de filtrar y de busqueda y detalle del producto.",
+            "Traductor creado en base a una api, que cuenta con todas las funcionalidaes de un traductor y por el momento 3 lenguajes. Constuido con tecnologías frontend. Un diseño completamente responsive",
         img: "./project2.png",
-        tags: [TAGS.PHP, TAGS.JS, TAGS.HTML, TAGS.CSS],
-        github: "https://github.com/Drezxzx/bazar-store",
-        link: "https://bazar-store.000webhostapp.com/bazar-store/main.php",
+        tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT],
+        github: "https://github.com/Drezxzx/tranlated.io",
+        link: "https://tranlated-io.vercel.app/",
     },
     {
         tittle: "Trivia",
