--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,9 +3,9 @@ import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
 {
         date : "Febrero/2024-Actualidad",
-        tittle : "Practicas de un curso de programacion(PROGRAMACION EN LENGUAJES ESTRUCTURADOS Y DE GESTIÓN) ",
+        tittle : "Programador Junior ",
         place : "Digital Target",
-        description : "Manejo de base de datos relacionales, transformación, exclución y explotación de datos. utilizando Access y SQL"
+        description : "Manejo de base de datos relacionales, transformación, exclución y explotación de datos. utilizando Access(VBA) y SQL"
     },
     {
         date : "Agoosto/2020-Mayo/2021",
