--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -143,7 +143,7 @@ const PROJECTS = [
                     {tags.map((tag) => (
                         <li>
                             <span
-                                class={` text-xs font-semibold flex lg:gap-x-2 gap-x-1 items-center flex-row rounded-full py-1 px-2 ${tag.class}`}
+                                class={` text-xs text-white font-semibold flex lg:gap-x-2 gap-x-1 items-center flex-row rounded-full py-1 px-2 ${tag.class}`}
                             >
                                 <tag.icon class="size-5" />
                                 {tag.name}
