--- a/src/components/Tecnologies.astro
+++ b/src/components/Tecnologies.astro
@@ -2,6 +2,7 @@
 import Css from "../icons/Css.astro";
 import Html from "../icons/Html.astro";
 import Js from "../icons/Js.astro";
+import TypeScript from '../icons/TypeScript.astro'
 import Php from "../icons/Php.astro";
 import Sql from "../icons/Sql.astro";
 import React from "../icons/React.astro";
@@ -27,6 +28,7 @@ import Node from "../icons/Node.astro";
 <div class="flex flex-col gap-5">
 <React class="size-16 hover:scale-110 transition"></React>
 <Tailwind class="size-16 hover:scale-110 transition"></Tailwind>
+<TypeScript class="size-16 hover:scale-110 transition"></TypeScript>
 </div>
 
     
