--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,7 +5,7 @@ const EXPERIENCE = [
         date : "Febrero/2024-Actualidad",
         tittle : "Programador Junior ",
         place : "Digital Target",
-        description : "Manejo de base de datos relacionales, transformación, exclución y explotación de datos. utilizando Access(VBA) y SQL"
+        description : "Manejo de base de datos relacionales, transformación, exclución y explotación de datos. utilizando python, Access(VBA) y SQL"
     },
     {
         date : "Agoosto/2020-Mayo/2021",
