--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,7 +4,7 @@
             Me llamo <span class="text-purple-400/90">Andrés</span>, soy un programador web full stack apasionado por crear applicaiones con muchas <span class="text-purple-400/90">funcionalidades</span>, apasionado por aprender lenguajes y freamworks webs.
             </p>
         <p class="text-base  md:text-lg text-pretty">
-            <span class="text-purple-400/80 ">Actualmente</span> me encuentro realizando las practicas de una formación profesional en programación de lenguajes estructurados. En estas practicas estoy construyendo <span class="text-purple-400/80 ">una base de datos relacional</span> que se va a utilizar en la aplicación de la empresa.
+            <span class="text-purple-400/80 ">Actualmente</span> me encuentro trabajando creando bases de datos en digital target. <span class="text-purple-400/80 ">Tambien desarrollo</span> entornos para la explotación de estas bases de datos.
         </p>
     </div>
     
