--- a/src/components/Tecnologies.astro
+++ b/src/components/Tecnologies.astro
@@ -8,6 +8,7 @@ import Sql from "../icons/Sql.astro";
 import React from "../icons/React.astro";
 import Tailwind from "../icons/Tailwind.astro";
 import Node from "../icons/Node.astro";
+import Python from "../icons/Python.astro";
 
 
 ---
