Actualizar Projects.astro

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -97,9 +97,9 @@ const PROJECTS = [
         link: "https://tranlated-io.vercel.app/",
     },
     {
-        tittle: "Acortador para empresa",
+        tittle: "Acortador Url",
         description:
-            "Acortador de urls hecho para la empresa digital taget, desarrollado completamente por mi, utilizando turso db para la base de datos.",
+            "Acortador de urls, desarrollado completamente por mi, utilizando turso db para la base de datos.",
         img: "./project5.png",
         tags: [ TAGS.TYPESCRYPT,TAGS.NEXTJS ,TAGS.TURSO],
         github: "https://github.com/Drezxzx/shorter-url",
