--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ import Experience from '../components/Experience.astro'
 			</h1>
 			<h2 class="text-white text-xl lg:text-3xl max-w-[700px] text-wrap">
 				<span class="text-purple-400/90"
-					>2 año de experiecia de estudios</span
+					>8 meses de experiecia</span
 				>,
 				<span class="opacity-80">Desarrollador web.</span>
 				<span class="opacity-80">De Madrid, España 🇪🇸.</span>
