--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import Experience from '../components/Experience.astro'
 				<div class="flex items-center justify-center">
 					<a class="flex items-center justify-center"
 						href="https://www.linkedin.com/in/andr%C3%A9s-rodr%C3%ADguez-3153a1299?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
-						><Beadge>Disponible para trabajar</Beadge></a
+						><Beadge>No Disponible para trabajar</Beadge></a
 					>
 				</div>
 			</h1>
