--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import Experience from '../components/Experience.astro'
 				<span class="opacity-80">De Madrid, España 🇪🇸.</span>
 				<span class="opacity-80">Especializado en crear</span>
 				<span class="opacity-80"
-					>apliclaciones web completas.</span
+					>apliclaciones web y bases de datos relacionadas.</span
 				>
 			</h2>
 
