--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import SectionContainer from '../components/SectionContainer.astro'
 import Experience from '../components/Experience.astro'
 ---
 
-<Layout title="Portolio De Andres Desarrollador">
+<Layout title="Portafolio De Andres Desarrollador">
 	<main class="px-4 animate-fade-in-down">
 		<SectionContainer id="Inicio"  class="py-44  pb-32">
 			<img
