--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,7 +37,7 @@
 
     @keyframes nav-shadown {
         to {
-            @apply shadow-lg ring-1 backdrop-blur  bg-white/50 ring-white/10;
+            @apply shadow-lg ring-1 backdrop-blur  bg-white/50 border border-white/85 ring-white/10;
         }
     }
 </style>
