--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,13 +6,13 @@
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
         <li>
-            <a href="#about" class="hover:underline me-4 md:me-6">Sobre mi</a>
+            <a href="#Sobre mi" class="hover:underline me-4 md:me-6">Sobre mi</a>
         </li>
         <li>
-            <a href="#experience" class="hover:underline me-4 md:me-6">Experiencia</a>
+            <a href="#Experiencia" class="hover:underline me-4 md:me-6">Experiencia</a>
         </li>
         <li>
-            <a href="#projects" class="hover:underline me-4 md:me-6">Proyectos</a>
+            <a href="#Proyectos" class="hover:underline me-4 md:me-6">Proyectos</a>
         </li>
       
     </ul>
