--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,13 +2,19 @@
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
 {
-        date : "Febrero/2024-Actualidad",
+        date : "Abril/2024-Octubre/2024",
         tittle : "Programador Junior ",
         place : "Digital Target",
         description : "Desarrollo de software y cración de base de datos relacionales, transformación, exclución y explotación de datos. utilizando python, Access(VBA) y SQL"
     },
+{
+        date : "Febrero/2024-Marzo/2024",
+        tittle : "Practicas Programador Junior ",
+        place : "Digital Target",
+        description : "Durante mis prácticas, participé en la creación de bases de datos, lo que me permitió adquirir habilidades en el diseño y gestión de información estructurada."
+    },
     {
-        date : "Agoosto/2020-Mayo/2021",
+        date : "Agoosto/2019-Mayo/2020",
         tittle : "Practicas de bachillerato administrativo",
         place : "Ayuntamento de Santo Domingo(Republica Dominicana)",
         description : "Manejo de inventario haciendo uso de excel"
