--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
+import File from "../icons/File.astro";
 import Beadge from "../components/Beadge.astro";
 import Github from "../icons/Github.astro";
 import Linkedin from "../icons/linkedin.astro";
@@ -16,6 +16,8 @@ import Projects from "../components/Projects.astro";
 import SectionContainer from '../components/SectionContainer.astro'
 import Experience from '../components/Experience.astro'
 ---
+
+
 
 <Layout title="Portafolio De Andres Desarrollador">
 	<main class="px-4 animate-fade-in-down">
@@ -62,6 +64,10 @@ import Experience from '../components/Experience.astro'
 					<Mail />
 					andres250197@hotmail.com
 				</Social>
+				<Social>
+					<File/>
+					<button class="cursor-pointer" id="pdf">Descargar CV</button>
+				</Social>
 			</nav>
 		</SectionContainer >
 
@@ -102,3 +108,17 @@ import Experience from '../components/Experience.astro'
 		</SectionContainer>
 	</main>
 </Layout>
+
+<script>
+ function donwLoadPdf() {
+	const link = document.createElement("a");
+	link.href = "Curriculum Andrés Rodríguez.pdf";
+	link.download = "Curriculum Andrés Rodríguez.pdf";
+	document.body.appendChild(link);
+	link.click();
+	document.body.removeChild(link);
+ }
+
+ const pdf = document.getElementById("pdf");
+ pdf?.addEventListener("click", donwLoadPdf);
+</script>
