--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,7 +112,7 @@ import Experience from '../components/Experience.astro'
 <script>
  function donwLoadPdf() {
 	const link = document.createElement("a");
-	link.href = "/Curriculum Andrés Rodríguez.pdf";
+	link.href = "https://drive.google.com/file/d/1n1LpuULHKSogA0llqqCTID-0CTer8TLo/view?usp=drive_link";
 	link.target = "_blank"
 	document.body.appendChild(link);
 	link.click();
