--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -176,11 +176,13 @@ const PROJECTS = [
                 </ul>
             </div>
 
-            <img
-                class="rounded  object-cover transition-transform ease-in-out duration-300  shadow-2xl shadow-purple-400/20"
-                src={img}
-                alt="Captura del proyecto"
-            />
+            <div class="overflow-hidden rounded shadow-2xl shadow-purple-400/20">
+                <img
+                    class="rounded object-cover transition-transform ease-in-out duration-300 hover:scale-[1.04]  "
+                    src={img}
+                    alt="Captura del proyecto"
+                />
+            </div>
         </article>
     ))
 }
