--- a/src/icons/Breifcase.astro
+++ b/src/icons/Breifcase.astro
@@ -1,6 +1,6 @@
-<svg
+<!-- <svg
     xmlns="http://www.w3.org/2000/svg"
-    class ={Astro.props.class} 
+    class={Astro.props.class}
     width="24"
     height="24"
     viewBox="0 0 24 24"
@@ -13,4 +13,23 @@
         d="M3 7m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v9a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"
     ></path><path d="M8 7v-2a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v2"></path><path
         d="M12 12l0 .01"></path><path d="M3 13a20 20 0 0 0 18 0"></path></svg
+> -->
+
+<svg
+    xmlns="http://www.w3.org/2000/svg"
+    width="24"
+    height="24"
+    class={Astro.props.class}
+    viewBox="0 0 24 24"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="2"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+    class="icon icon-tabler icons-tabler-outline icon-tabler-building-skyscraper"
+    ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+        d="M3 21l18 0"></path><path d="M5 21v-14l8 -4v18"></path><path
+        d="M19 21v-10l-6 -4"></path><path d="M9 9l0 .01"></path><path
+        d="M9 12l0 .01"></path><path d="M9 15l0 .01"></path><path
+        d="M9 18l0 .01"></path></svg
 >
