--- a/src/icons/Code.astro
+++ b/src/icons/Code.astro
@@ -1,15 +1,15 @@
 <svg
     xmlns="http://www.w3.org/2000/svg"
-    {...Astro.props}
     width="24"
+    {...Astro.props}
     height="24"
     viewBox="0 0 24 24"
-    stroke-width="2"
-    stroke="currentColor"
     fill="none"
+    stroke="currentColor"
+    stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
+    class="icon icon-tabler icons-tabler-outline icon-tabler-prompt"
     ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-        d="M7 8l-4 4l4 4"></path><path d="M17 8l4 4l-4 4"></path><path
-        d="M14 4l-4 16"></path></svg
+        d="M5 7l5 5l-5 5"></path><path d="M13 17l6 0"></path></svg
 >
