cambio en los proyectos

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -100,7 +100,7 @@ const PROJECTS = [
     {
         tittle: "Translated.io",
         description:
-            "Traductor creado en base a una api, que cuenta con todas las funcionalidaes de un traductor y por el momento 3 lenguajes. Constuido con tecnologías frontend. Un diseño completamente responsive",
+            "Traductor creado en base a una api, que cuenta con todas las funcionalidaes de un traductor. Constuido con tecnologías frontend. Un diseño completamente responsive",
         img: "./project2.png",
         tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT],
         github: "https://github.com/Drezxzx/tranlated.io",
