--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -102,9 +102,18 @@ const PROJECTS = [
         description:
             "Traductor creado en base a una api, que cuenta con todas las funcionalidaes de un traductor. Constuido con tecnologías frontend. Un diseño completamente responsive",
         img: "./project2.png",
-        tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT],
+        tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT, TAGS.NEXTJS],
         github: "https://github.com/Drezxzx/tranlated.io",
         link: "https://tranlated-io.vercel.app/",
+    },
+    {
+        tittle: "Creador de codigosQR",
+        description:
+            "Creador de codigos QR, con un diseño minimalista y una interfaz de usuario muy amigable. Creado con tailwindcss y react, completamente responsive",
+        img: "./project6.png",
+        tags: [TAGS.TYPESCRYPT, TAGS.TAILWIND, TAGS.REACT, TAGS.NEXTJS],
+        github: "https://github.com/Drezxzx/qr-generator",
+        link: "https://qr-generator-eta-seven.vercel.app/",
     },
     {
         tittle: "Tienda De Movíles",
